[package]
name = "yt-d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
qstring = "0.7.2"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["blocking"] }
serde_json = "1.0.96"
